@@ -1,7 +1,12 @@
 CORE
 sequence_intersect1.sv
-
-^\[.*\] main\.x == 0 intersect main\.x == 1: FAILURE: property not supported by BMC engine$
+--bound 10
+^\[main\.p0\] main\.x == 0 intersect main\.x == 1: REFUTED$
+^\[main\.p1\] always main\.x >= 0: PROVED up to bound 10$
+^\[main\.p2\] always main\.x <= 5: PROVED up to bound 10$
+^\[main\.p3\] always main\.x <= 3: REFUTED$
+^\[main\.p4\] always \(main\.x >= 0 intersect main\.x <= 5\): PROVED up to bound 10$
+^\[main\.p5\] always \(main\.x >= 0 intersect main\.x <= 3\): REFUTED$
 ^EXIT=10$
 ^SIGNAL=0$
 --
