@@ -119,10 +119,6 @@ bool bmc_supports_SVA_property(const exprt &expr)
   if(has_subexpr(expr, ID_sva_sequence_throughout))
     return false;
 
-  // sva_sequence_intersect is not supported yet
-  if(has_subexpr(expr, ID_sva_sequence_intersect))
-    return false;
-
   // sva_sequence_within is not supported yet
   if(has_subexpr(expr, ID_sva_sequence_within))
     return false;
