@@ -1181,4 +1181,29 @@ to_sva_sequence_consecutive_repetition_expr(exprt &expr)
   return static_cast<sva_sequence_consecutive_repetition_exprt &>(expr);
 }
 
+class sva_sequence_intersect_exprt : public binary_exprt
+{
+public:
+  sva_sequence_intersect_exprt(exprt op0, exprt op1)
+    : binary_exprt(std::move(op0), ID_sva_sequence_intersect, std::move(op1))
+  {
+  }
+};
+
+static inline const sva_sequence_intersect_exprt &
+to_sva_sequence_intersect_expr(const exprt &expr)
+{
+  PRECONDITION(expr.id() == ID_sva_sequence_intersect);
+  sva_sequence_intersect_exprt::check(expr, validation_modet::INVARIANT);
+  return static_cast<const sva_sequence_intersect_exprt &>(expr);
+}
+
+static inline sva_sequence_intersect_exprt &
+to_sva_sequence_intersect_expr(exprt &expr)
+{
+  PRECONDITION(expr.id() == ID_sva_sequence_intersect);
+  sva_sequence_intersect_exprt::check(expr, validation_modet::INVARIANT);
+  return static_cast<sva_sequence_intersect_exprt &>(expr);
+}
+
 #endif
